[FIX] Wrong GPIO Selected for Hall Sensor [FIX] Remove unused flags from sdc2

--- a/a64-teres.dts
+++ b/a64-teres.dts
@@ -3450,6 +3450,6 @@
 		device_type = "hall";
 		hall_power = "hall-vcc-18";
 		hall_power_vol = <0x708>;
-		hall_gpio = <0x79 0xb 0xc 0x6 0xffffffff 0xffffffff 0x0>;
+		hall_gpio = <0x30 0x1 0x0 0x6 0xffffffff 0xffffffff 0x0>;
 	};
 };
