--- a/a64-teres_uboot.dts
+++ b/a64-teres_uboot.dts
@@ -2071,27 +2071,15 @@
 			clock-names = "osc24m", "pll_periph", "mmc", "ahb", "rst";
 			pinctrl-names = "default", "sleep";
 			pinctrl-1 = <0x5f>;
-			bus-width = <0x8>;
-			max-frequency = <0x5f5e100>;
-			sdc_tm4_sm0_freq0 = <0x0>;
-			sdc_tm4_sm0_freq1 = <0x0>;
-			sdc_tm4_sm1_freq0 = <0x0>;
-			sdc_tm4_sm1_freq1 = <0x0>;
-			sdc_tm4_sm2_freq0 = <0x0>;
-			sdc_tm4_sm2_freq1 = <0x0>;
-			sdc_tm4_sm3_freq0 = <0x5000000>;
-			sdc_tm4_sm3_freq1 = <0x405>;
-			sdc_tm4_sm4_freq0 = <0x50000>;
-			sdc_tm4_sm4_freq1 = <0x408>;
+			bus-width = <0x8>;			
+            		max-frequency = <50000000>;
 			status = "okay";
-			non-removable;
 			pinctrl-0 = <0xb3>;
-			cd-gpios;
-			sunxi-power-save-mode;
-			sunxi-dis-signal-vol-sw;
-			mmc-ddr-1_8v;
-			mmc-hs200-1_8v;
-			mmc-hs400-1_8v;
+			non-removable;
+       		        cd-gpios;
+            		mmc-ddr-1_8v;
+            		mmc-hs200-1_8v;
+            		sunxi-dly-52M;
 			vmmc = "vcc-emmc";
 			vqmmc = "vcc-lpddr";
 			vdmmc = "none";
