--- a/a64-teres.dts
+++ b/a64-teres.dts
@@ -2800,7 +2800,7 @@
 			compatible = "allwinner,keyboard_2000mv";
 			reg = <0x0 0x1c21800 0x0 0x400>;
 			interrupts = <0x0 0x1e 0x0>;
-			status = "okay";
+			status = "disable";
 			key_cnt = <0x5>;
 			key1 = <0xf0 0x73>;
 			key2 = <0x1f4 0x72>;
