--- a/a64-olinuxino_uboot.dts
+++ b/a64-olinuxino_uboot.dts
@@ -2062,7 +2062,7 @@
 			pinctrl-0 = <0xa8 0xa9>;
 		};
 
-		sdmmc@01C11000 {
+	sdmmc@01C11000 {
 			compatible = "allwinner,sun50i-sdmmc2";
 			device_type = "sdc2";
 			reg = <0x0 0x1c11000 0x0 0x1000>;
@@ -2072,31 +2072,18 @@
 			pinctrl-names = "default", "sleep";
 			pinctrl-1 = <0x5f>;
 			bus-width = <0x8>;
-			max-frequency = <0x5f5e100>;
-			sdc_tm4_sm0_freq0 = <0x0>;
-			sdc_tm4_sm0_freq1 = <0x0>;
-			sdc_tm4_sm1_freq0 = <0x0>;
-			sdc_tm4_sm1_freq1 = <0x0>;
-			sdc_tm4_sm2_freq0 = <0x0>;
-			sdc_tm4_sm2_freq1 = <0x0>;
-			sdc_tm4_sm3_freq0 = <0x5000000>;
-			sdc_tm4_sm3_freq1 = <0x405>;
-			sdc_tm4_sm4_freq0 = <0x50000>;
-			sdc_tm4_sm4_freq1 = <0x408>;
-			status = "okay";
+			max-frequency = <0x2faf080>;
+			pinctrl-0 = <0xb4>;
 			non-removable;
-			pinctrl-0 = <0xb3>;
 			cd-gpios;
-			sunxi-power-save-mode;
-			sunxi-dis-signal-vol-sw;
 			mmc-ddr-1_8v;
 			mmc-hs200-1_8v;
-			mmc-hs400-1_8v;
-			vmmc = "vcc-emmc";
-			vqmmc = "vcc-lpddr";
+			sunxi-dly-52M;
+			vmmc = "none";
+			vqmmc = "vcc-kur";
 			vdmmc = "none";
+			status = "okay";
 		};
-
 		sdmmc@01c0f000 {
 			compatible = "allwinner,sun50i-sdmmc0";
 			device_type = "sdc0";
